<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/new_mes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        android:textSize="14pt" />

    <EditText
        android:id="@+id/et_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_mes"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/add_date"
        android:inputType="date"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryTextDark"
        android:textSize="12pt" />

    <EditText
        android:id="@+id/et_arterial"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_date"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/add_arterial"
        android:inputType="number"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryTextDark"
        android:textSize="12pt" />

    <EditText
        android:id="@+id/et_venous"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_date"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@+id/et_arterial"
        android:ems="10"
        android:hint="@string/add_venous"
        android:inputType="number"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryTextDark"
        android:textSize="12pt" />

    <EditText
        android:id="@+id/et_pulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_arterial"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/add_pulse"
        android:inputType="number"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryTextDark"
        android:textSize="12pt" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_pulse"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="Save"
        android:textColor="@color/colorPrimaryText" />


</RelativeLayout>